ADDED A SEARCH FEATURE ON THE MOVIES TAB AND PERFORMED SQL INJECTION FOR PART A AND C

--- a/frontend/movies.html
+++ b/frontend/movies.html
@@ -22,6 +22,14 @@
     </header>
 
     <main>
+      <section class="search-section">
+        <h2>Search Movies</h2>
+        <form id="searchForm">
+          <input type="text" id="searchInput" placeholder="Search for movies...">
+          <button type="submit">Search</button>
+        </form>
+      </section>
+
       <section class="filters">
         <h2>Filter Movies</h2>
         <form action="movies.html" method="GET">
